@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-11-07T12:29:06Z",
-  "count_outdated" : 2846,
-  "uniques_outdated" : 910,
+  "timestamp" : "2024-11-08T01:09:56Z",
+  "count_outdated" : 2847,
+  "uniques_outdated" : 911,
   "count" : 2866,
   "uniques" : 916,
   "views" : [
-    {
-      "timestamp": "2024-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-25T00:00:00Z",
       "count": 11,
