@@ -1,12 +1,7 @@
 {
-  "count": 20,
-  "uniques": 6,
+  "count": 19,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2024-10-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-25T00:00:00Z",
       "count": 11,
